samples/_failures_safe/1761552411_4f8975_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_df1d104e.c: In function ‘main’:
./samples/SAFE/__tmp_df1d104e.c:172:5: error: expected expression at end of input
  172 |     if (len > 0 && input[len-1] == '\n')
      |     ^~
./samples/SAFE/__tmp_df1d104e.c:172:5: error: expected declaration or statement at end of input
